cmake_minimum_required(VERSION 3.20)

project(ProtocolParser_APP VERSION 1.0.2 LANGUAGES CXX)

add_definitions(-DFRAMELESSHELPER_CORE_NO_DEBUG_OUTPUT)
add_definitions(-DFRAMELESSHELPER_QUICK_NO_DEBUG_OUTPUT)
set(FRAMELESSHELPER_BUILD_STATIC ON)
set(FRAMELESSHELPER_BUILD_WIDGETS OFF)
set(FRAMELESSHELPER_NO_SUMMARY OFF)
set(FRAMELESSHELPER_REPRODUCIBLE_OUTPUT ON)
set(RIBBONUI_BUILD_FRAMELESSHEPLER ON)
set(RIBBONUI_BUILD_EXAMPLES OFF)
set(RIBBONUI_BUILD_STATIC_LIB ON)
add_subdirectory(3rdparty/RibbonUI)
add_subdirectory(app_source)
